--- a/apps/ideas/templates/civic_europe_ideas/idea_list.html
+++ b/apps/ideas/templates/civic_europe_ideas/idea_list.html
@@ -89,7 +89,7 @@
                     {% blocktrans count ideacount=view.get_queryset.count %}
                         <p>One idea found</p>
                         {% plural %}
-                        <p>{{ ideacount }} Ideas found</p>
+                        <p>{{ ideacount }} ideas found</p>
                     {% endblocktrans %}
                     {% endif %}
                     </div>
