--- a/apps/ideas/templates/civic_europe_ideas/includes/idea_detail_header.html
+++ b/apps/ideas/templates/civic_europe_ideas/includes/idea_detail_header.html
@@ -1,7 +1,7 @@
 {% load i18n static react_ratings idea_tags thumbnail rules %}
 
 <div class="ideadetail-header row">
-    <div class="ideadetail-image d-flex flex-column justify-content-between px-3" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000000), url({% if idea.idea_image %} {{ idea.idea_image|thumbnail_url:'ideadetailimage' }} {% else %} {% static 'images/placeholder_blue.svg' %} {% endif %});">
+    <div class="ideadetail-image d-flex flex-column justify-content-between px-3" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000000), url({% if idea.image %} {{ idea.image|thumbnail_url:'ideadetailimage' }} {% else %} {% static 'images/placeholder_blue.svg' %} {% endif %});">
 
         <!-- <div class="ideadetailheader-content"> -->
 
