styling/idea detail: smaller image for bigger sizes and less tab space for mobile

--- a/civic_europe/assets/scss/components/_tabs.scss
+++ b/civic_europe/assets/scss/components/_tabs.scss
@@ -17,8 +17,8 @@
         border-radius: 0;
 
         @media screen and (max-width: $screen-xs-max) {
-            padding-right: $spacer;
-            padding-left: $spacer;
+            padding-right: 0.7 * $spacer;
+            padding-left: 0.7 * $spacer;
         }
     }
 
