--- a/civic_europe/assets/scss/core/variables.scss
+++ b/civic_europe/assets/scss/core/variables.scss
@@ -125,21 +125,17 @@ $btn-ce-secondary-color:         $gray-dark !default;
 $btn-ce-secondary-bg:            $brand-secondary !default;
 $btn-ce-secondary-border:        darken($btn-ce-secondary-bg, 5%) !default;
 
-$btn-ae-github-color:            #fff !default;
-$btn-ae-github-bg:               $ce-github;
-$btn-ae-github-border:           darken($ce-github, 5%) !default;
+$btn-ce-github-color:            #fff !default;
+$btn-ce-github-bg:               $ce-github;
+$btn-ce-github-border:           darken($ce-github, 5%) !default;
 
-$btn-ae-facebook-color:          #fff !default;
-$btn-ae-facebook-bg:             $ce-facebook;
-$btn-ae-facebook-border:         darken($ce-facebook, 5%) !default;
+$btn-ce-facebook-color:          #fff !default;
+$btn-ce-facebook-bg:             $ce-facebook;
+$btn-ce-facebook-border:         darken($ce-facebook, 5%) !default;
 
-$btn-ae-google-color:            #fff !default;
-$btn-ae-google-bg:               $ce-google;
-$btn-ae-google-border:           darken($ce-google, 5%) !default;
-
-$btn-ae-instagram-color:         #fff !default;
-$btn-ae-instagram-bg:            $ce-instagram;
-$btn-ae-instagram-border:        darken($ce-instagram, 5%) !default;
+$btn-ce-google-color:            #fff !default;
+$btn-ce-google-bg:               $ce-google;
+$btn-ce-google-border:           darken($ce-google, 5%) !default;
 
 $btn-default-bg:                 $ce-light-gray !default;
 $btn-default-border:             darken($ce-light-gray, 5%) !default;
