--- a/apps/users/templates/civic_europe_users/base_accounts_settings_form.html
+++ b/apps/users/templates/civic_europe_users/base_accounts_settings_form.html
@@ -11,7 +11,7 @@
                     <li class="list-group-item {% if edit_profile_url == request.get_full_path  %} active {% endif %}">
                         <a href="{% url 'edit_profile' %}">
                             <i class="fa fa-user fa-fw" aria-hidden="true"></i>
-                            {% trans 'Your Profile' %}
+                            {% trans 'Your profile' %}
                         </a>
                     </li>
                     {% url 'account_change_password' as change_password_url %}
@@ -19,9 +19,9 @@
                         <a href="{% url 'account_change_password' %}">
                             <i class="fa fa-lock fa-fw" aria-hidden="true"></i>
                             {% if request.user.has_usable_password %}
-                                {% trans 'Change Password' %}
+                                {% trans 'Change password' %}
                             {% else %}
-                                {% trans 'Set Password' %}
+                                {% trans 'Set password' %}
                             {% endif %}
                         </a>
                     </li>
@@ -29,21 +29,21 @@
                     <li class="list-group-item {% if change_email_url == request.get_full_path  %} active {% endif %}">
                         <a href="{% url 'account_email' %}">
                             <i class="fa fa-envelope fa-fw" aria-hidden="true"></i>
-                            {% trans 'Mail adresses' %}
+                            {% trans 'E-mail adresses' %}
                         </a>
                     </li>
                     {% url 'socialaccount_connections' as social_accounts_url %}
                     <li class="list-group-item {% if social_accounts_url == request.get_full_path  %} active {% endif %}">
                         <a href="{% url 'socialaccount_connections' %}">
                             <i class="fa fa-users fa-fw" aria-hidden="true"></i>
-                            {% trans 'Account Connections' %}
+                            {% trans 'Account connections' %}
                         </a>
                     </li>
                     {% url 'notifications' as notifications_url %}
                     <li class="list-group-item {% if notifications_url == request.get_full_path  %} active {% endif %}">
                         <a href="{% url 'notifications' %}">
                             <i class="fa fa-bell fa-fw" aria-hidden="true"></i>
-                            {% trans 'Newsletter & Notifications' %}
+                            {% trans 'Newsletter & notifications' %}
                         </a>
                     </li>
                 </ul>
