--- a/civic_europe/templates/account/email.html
+++ b/civic_europe/templates/account/email.html
@@ -2,13 +2,13 @@
 
 {% load i18n widget_tweaks %}
 
-{% block title %}{% trans 'E-mail Addresses' %}{% endblock %}
+{% block title %}{% trans 'E-mail Adresses' %}{% endblock %}
 
 {% block form %}
     <form action="{% url 'account_email' %}?next={{ request.path }}" class="custom-form email_list" method="post">
         {% csrf_token %}
         <fieldset>
-        <legend>{% trans 'E-mail Adresses' %}</legend>
+        <legend>{% trans 'E-mail adresses' %}</legend>
         <div class="form-group {% if form.email.errors %}has-error {% endif %}">
             <label>{{ form.email.label }}</label>
             {% for emailaddress in user.emailaddress_set.all %}
