templates/topmenu: add submenu title, correct styling, rm un-needed dropdown button overwrites fixes #54

--- a/civic_europe/assets/scss/all.scss
+++ b/civic_europe/assets/scss/all.scss
@@ -12,6 +12,7 @@
 @import "core/util";
 @import "core/buttons";
 @import "core/layout";
+@import "core/dropdowns";
 
 @import "components/a4-comments";
 @import "components/alert";
