--- a/civic_europe/templates/includes/top_menu.html
+++ b/civic_europe/templates/includes/top_menu.html
@@ -22,8 +22,8 @@
                 {% for menuitem in top_menu_items %}
                 {% if menuitem.subpages %}
                 <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ menuitem.translated_menu_title }} <span class="caret"></span></a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ menuitem.menu_title }} <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                    <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdown">
                         {% for subpage in menuitem.subpages %}
                         <a class="dropdown-item" href="{{ subpage.value.link.url }}">{{ subpage.value.link_text }}</a>
                         {% endfor %}
