--- a/apps/ideas/templates/civic_europe_ideas/idea_detail.html
+++ b/apps/ideas/templates/civic_europe_ideas/idea_detail.html
@@ -38,8 +38,8 @@
             {% include 'civic_europe_ideas/includes/idea_detail_header.html' %}
 
             <div class="row d-md-none ideadetail-xs-support">
-                <ul class="nav">
-                    <li class="nav-idea nav-support">
+                <ul class="nav col pr-0">
+                    <li class="nav-idea nav-support mr-auto">
                         {% has_perm 'civic_europe_ideas.may_rate_idea' request.user idea as may_rate_idea %}
                         {% if may_rate_idea %}
                         {% react_supports idea True %}
@@ -50,7 +50,7 @@
             </div>
 
             <div class="row ideadetail-tab-bar">
-                <div class="col-md-7">
+                <div class="col-md-7 col-lg-6">
                 <ul class="nav nav-tab tabs" role="tablist">
 
                     <li role="presentation" class="nav-item">
@@ -69,7 +69,7 @@
 
                 </ul>
                 </div>
-                <div class="col-md-5 px-md-0">
+                <div class="col-md-5 col-lg-6">
                 <ul class="nav nav-tab justify-content-end">
                     {% include 'civic_europe_ideas/includes/idea_detail_watch_btns.html' with xs_class="d-none d-md-block" %}
                 </ul>
