assets/comments: add quick styling fixes to comments

--- a/civic_europe/assets/scss/components/_comments.scss
+++ b/civic_europe/assets/scss/components/_comments.scss
@@ -2,6 +2,17 @@
     display: none;
 }
 
+.action-bar {
+    > .navbar-static {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    > .navbar {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
 .comment-box {
     & textarea {
         margin-top: 0.5*$spacer;
