--- a/civic_europe/assets/scss/components/navbar.scss
+++ b/civic_europe/assets/scss/components/navbar.scss
@@ -56,6 +56,10 @@
     margin-bottom: 0.5*$spacer;
 }
 
+.navbar-nav .dropdown-menu {
+    position: absolute !important;
+}
+
 .nav-item.dropdown.show > .nav-link {
     background-color: $ce-light-gray;
 }
