assets/images: updating avatars, favicons and placeholder images

--- a/cms/home/templates/cms_home/blocks/blog_block.html
+++ b/cms/home/templates/cms_home/blocks/blog_block.html
@@ -22,7 +22,7 @@
                                 {% if post.image %}
                                     <img class="hover-child-img" src="{{ image.url }}">
                                 {% else %}
-                                    <img class="hover-child-img" src="{% static 'images/placeholder_yellow.svg' %}">
+                                    <img class="hover-child-img" src="{% static 'images/placeholder_02.svg' %}">
                                 {% endif %}
                             </a>
                         </div>
