--- a/apps/ideas/templates/civic_europe_ideas/includes/idealist_item.html
+++ b/apps/ideas/templates/civic_europe_ideas/includes/idealist_item.html
@@ -2,7 +2,7 @@
 <div class="idealist-item">
     <div class="idealist-upper">
         <a class="idealist-image hover-parent" href="{% url 'idea-detail' slug=idea.slug %}" tabindex="-1">
-            <img class="hover-child-img" src="{% if idea.image %} {{ idea.image|thumbnail_url:'ideatileimage' }} {% else %} {% static 'images/placeholder_blue.svg' %} {% endif %}"/>
+            <img class="hover-child-img" src="{% if idea.image %} {{ idea.image|thumbnail_url:'ideatileimage' }} {% else %} {% static 'images/placeholder_01.svg' %} {% endif %}"/>
             {% if idea.badge %}
             <span class="badge idealist__badge {{ idea.badge|cut:" " }}">{{ idea.badge }}</span>
             {% endif %}
