--- a/cms/blog/templates/cms_blog/blog_index_page.html
+++ b/cms/blog/templates/cms_blog/blog_index_page.html
@@ -46,7 +46,7 @@
                             {% image post.image fill-470x300 as image%}
                         {% endif %}
                         <div class="hover-parent blogindex-img col-xs-12 col-sm-5 offset-sm-3 col-md-5 offset-md-2">
-                            <a href="{% pageurl post %}" class="hover-child-img" style="background-image: url({% if post.image %} {{ image.url }} {% else %} {% static 'images/placeholder_yellow.svg' %} {% endif %});">
+                            <a href="{% pageurl post %}" class="hover-child-img" style="background-image: url({% if post.image %} {{ image.url }} {% else %} {% static 'images/placeholder_02.svg' %} {% endif %});">
                             </a>
                         </div>
                         <div class="blogindex-text col-xs-12 col-sm-4 col-md-3">
