--- a/cms/blog/templates/cms_blog/includes/blog_index_featured_item.html
+++ b/cms/blog/templates/cms_blog/includes/blog_index_featured_item.html
@@ -6,7 +6,7 @@
             {% image page.featured_page.image fill-870x500 as image%}
         {% endif %}
         <div class="hover-parent blogindex-featured-img col-xs-12 col-sm-6 col-md-9">
-            <a href="{% pageurl page.featured_page %}" class="hover-child-img" style="background-image: url({% if image %} {{ image.url }} {% else %} {% static 'images/placeholder_yellow.svg' %} {% endif %});">
+            <a href="{% pageurl page.featured_page %}" class="hover-child-img" style="background-image: url({% if image %} {{ image.url }} {% else %} {% static 'images/placeholder_02.svg' %} {% endif %});">
             </a>
         </div>
         <div class="blogindex-text col-xs-12 col-sm-6 col-md-3">
