--- a/cms/home/templates/cms_home/structured_text_page.html
+++ b/cms/home/templates/cms_home/structured_text_page.html
@@ -6,14 +6,15 @@
 
 {% block content %}
     <div class="container structured-page">
-        <div class="col-md-3 d-none d-md-block">
+        <div class="row">
+        <div class="d-none col-md-3 d-md-block">
             <ul id="structured-page-side-nav" class="nav flex-column structured-page-side-nav">
                 {% for block in page.body %}
                     <li role="presentation"><a href="#section{{ forloop.counter }}" class="structured-page-side-nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> {{ block.value.title }}</a></li>
                 {% endfor %}
             </ul>
         </div>
-        <div class="col-md-6 col-sm-12 col-xs-12 structured-page-sections-container" data-spy="scroll" data-target="#structured-page-side-nav" data-offset="70">
+        <div class="col-md-6 structured-page-sections-container" data-spy="scroll" data-target="#structured-page-side-nav" data-offset="70">
             {% for block in page.body %}
                 <div class="structured-page-section" id="section{{ forloop.counter }}">
                     <h2>{{ block.value.title }}</h2>
@@ -22,6 +23,7 @@
                     {% endfor %}
                 </div>
             {% endfor %}
+        </div>
         </div>
     </div>
 {% endblock %}
