--- a/civic_europe/assets/scss/core/_basics.scss
+++ b/civic_europe/assets/scss/core/_basics.scss
@@ -162,12 +162,12 @@ a,
 }
 
 blockquote {
-    background-color: $ce-brand-red-lighter;
+    background-color: $ce-brand-green-lighter;
     border-left: none;
     padding: 0.5*$spacer 0.75*$spacer;
     font-size: inherit;
 }
 
 quote {
-    background-color: $ce-brand-red-lighter;
+    background-color: $ce-brand-green-lighter;
 }
