--- a/civic_europe/assets/scss/core/variables.scss
+++ b/civic_europe/assets/scss/core/variables.scss
@@ -27,6 +27,7 @@ $ce-border--light: 1px solid $ce-light-gray;
 $ce-brand-red: #d57480; //logo colour #d55169
 $ce-brand-red-lighter: #de8f9d;
 $ce-brand-green: #01797f;
+$ce-brand-green-lighter: #c4dcdd;
 $ce-brand-green-rgb: rgba(1, 121, 127, 0.2); // currently only use for active blog category
 
 // Which colors are used for btn-ce-secondary is defined below.
