--- a/cms/home/templates/cms_home/blocks/question_answer_block.html
+++ b/cms/home/templates/cms_home/blocks/question_answer_block.html
@@ -4,7 +4,7 @@
             <h4 class="panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#accordion-{{ identifier }}" href="#collapse-{{ identifier }}-{{ number }}"
                    aria-expanded="true" aria-controls="collapse{{ number }}" class="collapsed panel-title-link">
-                    {{ value.question }} <i class="fa fa-chevron-up float-right"></i>
+                    {{ value.question }} <i class="fa fa-chevron-up float-right mt-1"></i>
                 </a>
             </h4>
         </div>
