templates/base_account_settings_form: update imageuploader path in attempt to fix server error on user settings apge

--- a/apps/users/templates/civic_europe_users/base_accounts_settings_form.html
+++ b/apps/users/templates/civic_europe_users/base_accounts_settings_form.html
@@ -56,5 +56,5 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="{% static 'a4images/imageUploader.js' %}"></script>
+<script src="{% static 'image_uploader.js' %}"></script>
 {% endblock %}
