apps/ideas: changed wording in section descriptions of idea update form
civic_europe/templates/formtools/wizard/wizard_form.html: changed wording in idea form

apps/ideas/templates/civic_europe_ideas/idea_update_form.html: use css class to display section_description_header in bold

civic_europe/templates/formtools/wizard/wizard_form.html: use css class to display section_description_header in bold

apps/ideas: moves text of applicant section description to helptext of first name

--- a/civic_europe/templates/formtools/wizard/wizard_form.html
+++ b/civic_europe/templates/formtools/wizard/wizard_form.html
@@ -7,6 +7,9 @@
 <div class="wizard-page">
     <form class="wizard custom-form container-narrow" method="post" enctype="multipart/form-data" novalidate>
         <h1>{{ view.title }} | {{ form.section_name }}</h1>
+        {% if form.section_description_header  %}
+        <span class="font-weight-bold">{{ form.section_description_header }}</span>
+        {% endif %}
         {% if form.section_description  %}
         <p>{{ form.section_description }}</p>
         {% endif %}
