--- a/apps/ideas/templates/civic_europe_ideas/idea_update_form.html
+++ b/apps/ideas/templates/civic_europe_ideas/idea_update_form.html
@@ -12,6 +12,9 @@
         </div>
         <form class="wizard custom-form container-narrow" data-safe-form="wizard" method="post" enctype="multipart/form-data" novalidate>
             <h1>{{ view.title }} | {{ form.section_name }}</h1>
+            {% if form.section_description_header  %}
+            <span class="font-weight-bold">{{ form.section_description_header }}</span>
+            {% endif %}
             {% if form.section_description  %}
             <p>{{ form.section_description }}</p>
             {% endif %}
