#2710 colours: updating colours as suggested for a11y

--- a/civic_europe/assets/scss/components/_blocks.scss
+++ b/civic_europe/assets/scss/components/_blocks.scss
@@ -59,11 +59,11 @@
     .panel-default {
         box-shadow: none;
         border-radius: 5px;
-        border: 1px solid $ce-dark-gray;
+        border: 1px solid $ce-light-gray;
     }
 
     .panel-heading {
-        background-color: $ce-light-gray;
+        background-color: $ce-lighter-gray;
     }
 
     .panel-title {
