--- a/civic_europe/assets/scss/components/_filters.scss
+++ b/civic_europe/assets/scss/components/_filters.scss
@@ -133,7 +133,7 @@
             width: 25px;
             height: 25px;
             border-radius: 50%;
-            background-color: $ce-brand-red-lighter;
+            background-color: $ce-brand-red;
             font-size: $font-size-base;
             text-align: center;
         }
