--- a/civic_europe/assets/scss/core/_basics.scss
+++ b/civic_europe/assets/scss/core/_basics.scss
@@ -50,7 +50,7 @@ a,
 
 @include selection {
     color: $gray-dark;
-    background: $ce-brand-red-lighter;
+    background: $ce-brand-red;
 }
 
 .container {
