--- a/cms/blog/templates/cms_blog/blog_index_page.html
+++ b/cms/blog/templates/cms_blog/blog_index_page.html
@@ -9,9 +9,9 @@
 {% block content %}
 <div class="custompage-blue">
     <div class="container">
-        <header class="custompage-header">
+        <header class="custompage-header py-3">
             <h1>{{ page.title }}</h1>
-            <p>{{ page.subtitle }}</p>
+            <span>{{ page.subtitle }}</span>
         </header>
     </div>
 </div>
@@ -24,17 +24,18 @@
             <div class="row"></div>
         {% endif %}
 
-        <div class="d-md-none {% if blogs.has_previous or category or not page.featured_page.live %}topics-no-featured{% endif %}">
-            <div class="row">
-                <div class="col-xs-12">
-                    {% include 'cms_blog/includes/blog_index_category_buttons.html' %}
-                </div>
-            </div>
-        </div>
-        <div class="row col-sm-3 col-md-2 d-none d-md-block blogindex-topics-neg-margin {% if blogs.has_previous or category or not page.featured_page.live %}topics-no-featured{% endif %}">
+
+        <div class="row">
+
+        <div class="d-md-none col {% if blogs.has_previous or category or not page.featured_page.live %}topics-no-featured{% endif %}">
             {% include 'cms_blog/includes/blog_index_category_buttons.html' %}
         </div>
 
+        <div class="d-none d-md-block col-md-2 blogindex-topics-neg-margin {% if blogs.has_previous or category or not page.featured_page.live %}topics-no-featured{% endif %}">
+            {% include 'cms_blog/includes/blog_index_category_buttons.html' %}
+        </div>
+
+        <div class="col-md-10 col-lg-9">
         <!-- All Blog Entries -->
         {% for post in blogs %}
             <!-- Featured blog entry shouldn't be shown twice on the first index page -->
@@ -45,25 +46,25 @@
                         {% if post.image %}
                             {% image post.image fill-470x300 as image%}
                         {% endif %}
-                        <div class="hover-parent blogindex-img col-xs-12 col-sm-5 offset-sm-3 col-md-5 offset-md-2">
+                        <div class="col-sm-5 col-md-7 hover-parent blogindex-img">
                             <a href="{% pageurl post %}" class="hover-child-img" style="background-image: url({% if post.image %} {{ image.url }} {% else %} {% static 'images/placeholder_02.svg' %} {% endif %});">
                             </a>
                         </div>
-                        <div class="blogindex-text col-xs-12 col-sm-4 col-md-3">
+                        <div class="col-sm-4 col-md-4 blogindex-text">
                             {% include 'cms_blog/includes/blog_categories.html' with categories=post.categories.all %}
                             <div class="blogindexentry-title">
                                 <h4><a href="{% pageurl post %}">{{ post.title }}</a></h4>
                             </div>
                             <!--lg and xs-->
-                            <div class="blogindex-teaser d-sm-none d-lg-block">
+                            <div class="d-sm-none d-lg-block blogindex-teaser">
                                 {{ post.teasertext|truncatechars:150 }}
                             </div>
                             <!--md-->
-                            <div class="blogindex-teaser d-none d-md-block d-lg-none">
+                            <div class="d-none d-md-block d-lg-none blogindex-teaser">
                                 {{ post.teasertext|truncatechars:80 }}
                             </div>
                             <!--sm-->
-                            <div class="blogindex-teaser d-none d-sm-block d-md-none">
+                            <div class="d-none d-sm-block d-md-none blogindex-teaser">
                                 {{ post.teasertext|truncatechars:60 }}
                             </div>
                             <div class="blog-createdates">
@@ -74,6 +75,7 @@
                 </div>
             {% endif %}
         {% empty %}
+        </div>
             <!-- No blog entry might exist for the category -->
             <div class="blogindex-no-entry row">
                 <h4>{% trans "Sorry, no blog entries exist for the chosen category." %}</h4>
@@ -84,5 +86,6 @@
         {% include 'includes/pagination.html' with page_obj=blogs %}
 
     </div>
+</div>
 </div>
 {% endblock %}
