assets/basics//ideas: update text colour of alert and highlight colour of text selection fixes #143

--- a/civic_europe/assets/scss/components/_ideas.scss
+++ b/civic_europe/assets/scss/components/_ideas.scss
@@ -10,6 +10,7 @@
 }
 
 .idealist-no-entry {
+    color: $white;
     background-color: $ce-brand-red;
     margin-top: 1.25*$spacer;
     margin-left: 0.25*$spacer;
