templates/checkboxselctmultiple: add class name to checkbox input to apply correct styling

--- a/civic_europe/templates/bootstrap3/layout/checkboxselectmultiple.html
+++ b/civic_europe/templates/bootstrap3/layout/checkboxselectmultiple.html
@@ -14,7 +14,7 @@
 
       {% if not inline_class %}<div class="form-check">{% endif %}
         <label class="{% if inline_class %}checkbox-{{ inline_class }}{% endif %}">
-            <input type="checkbox"{% if choice.0 in field.value or choice.0|stringformat:"s" in field.value or choice.0|stringformat:"s" == field.value|stringformat:"s" %} checked="checked"{% endif %} name="{{ field.html_name }}" id="id_{{ field.html_name }}_{{ forloop.counter }}" value="{{ choice.0|unlocalize }}" {{ field.field.widget.attrs|flatatt }}><span>{{ choice.1|unlocalize }}</span>
+            <input class="form-check-input" type="checkbox"{% if choice.0 in field.value or choice.0|stringformat:"s" in field.value or choice.0|stringformat:"s" == field.value|stringformat:"s" %} checked="checked"{% endif %} name="{{ field.html_name }}" id="id_{{ field.html_name }}_{{ forloop.counter }}" value="{{ choice.0|unlocalize }}" {{ field.field.widget.attrs|flatatt }}><span>{{ choice.1|unlocalize }}</span>
         </label>
       {% if not inline_class %}</div>{% endif %}
     {% endfor %}
