assets/home: put anchor in span and ensure span high enough to take header height in account fixes #156

--- a/civic_europe/assets/scss/components/_home.scss
+++ b/civic_europe/assets/scss/components/_home.scss
@@ -33,6 +33,12 @@
 .structured-page-section {
     padding-bottom: 3*$spacer;
 
+    &__anchor {
+        display: inline-block;
+        height: 100px;
+        margin-top: -100px;
+    }
+
     h2 {
         margin-top: 0;
         margin-bottom: 1.25*$spacer;
