--- a/cms/home/templates/cms_home/simple_page.html
+++ b/cms/home/templates/cms_home/simple_page.html
@@ -4,9 +4,11 @@
 
 {% block content %}
     <div class="container simple-page">
-        <div class="col-md-6 offset-md-3">
-            <h1>{{ page.title }}</h1>
-            {% include_block page.body %}
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <h1>{{ page.title }}</h1>
+                {% include_block page.body %}
+            </div>
         </div>
     </div>
 {% endblock %}
