assets/variables: updating middle gray to be inline with old design and adding white text to mod badge fixes #192

--- a/civic_europe/assets/scss/components/_comments.scss
+++ b/civic_europe/assets/scss/components/_comments.scss
@@ -48,6 +48,7 @@
         }
 
         .badge-subtle {
+            color: $white;
             background-color: $ce-middle-gray;
             text-transform: uppercase;
             padding: 3px 6px;
