--- a/civic_europe/assets/scss/core/variables.scss
+++ b/civic_europe/assets/scss/core/variables.scss
@@ -13,7 +13,7 @@ $ce-lighter-gray: #fafafa;
 $ce-light-gray: #f3f3f3;
 $ce-light-gray-shadow: #ccc;
 $ce-light-gray-darker: #e6e6e6;
-$ce-middle-gray: #6c6c6c;
+$ce-middle-gray: #999;
 $ce-dark-gray: #d8d8d8;
 $ce-font-size-extra-large: 48px;
 $ce-wizard-red: #dc3818;
