templates: Fix wrong static file name in 500.html

--- a/civic_europe/templates/500.html
+++ b/civic_europe/templates/500.html
@@ -3,7 +3,7 @@
     <head>
         <title>Error | Civic Europe</title>
         <link rel="stylesheet" href="{% static 'vendor.css' %}">
-        <link rel="stylesheet" href="{% static 'adhcoracy4.css' %}">
+        <link rel="stylesheet" href="{% static 'adhocracy4.css' %}">
     </head>
     <body>
         <nav class="navbar navbar-default fixed-top" aria-label="{% trans 'main menu' %}">
