signup: rm checkbox and newsletters for story #3552

--- a/apps/users/templates/civic_europe_users/notifications_form.html
+++ b/apps/users/templates/civic_europe_users/notifications_form.html
@@ -2,7 +2,7 @@
 {% load i18n widget_tweaks static crispy_forms_tags %}
 
 {% block title %}
-    {% trans "Newsletters & Notifications" %}
+    {% trans "Notifications" %}
 {% endblock %}
 
 {% block form %}
