--- a/apps/users/templates/civic_europe_users/base_accounts_settings_form.html
+++ b/apps/users/templates/civic_europe_users/base_accounts_settings_form.html
@@ -43,7 +43,7 @@
                     <li class="list-group-item {% if notifications_url == request.get_full_path  %} active {% endif %}">
                         <a href="{% url 'notifications' %}">
                             <i class="fa fa-bell fa-fw" aria-hidden="true"></i>
-                            {% trans 'Newsletter & notifications' %}
+                            {% trans 'Notifications' %}
                         </a>
                     </li>
                 </ul>
